# CE_task

./: .gitignore  CMakeLists.txt  README.md  nrf52dk_nrf52832.overlay  prj.conf
inc/: blinkThread.h  dataQueue.h  displayThread.h  fadingLed.h  measThread.h  oledDisplay.h  pwmThread.h  rangeMeter.h
src/: blinkThread.c  displayThread.c  fadingLed.c  main.c  measThread.c  oledDisplay.c  pwmThread.c  rangeMeter.c
vl6180_API/inc/: vl6180x_platform.h  vl6180x_types.h
vl6180_API/src/: vl6180x_api.c
